// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createDisableCompletionItem should create a stylelint-disable completion item 1`] = `
{
  "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable Stylelint. (Stylelint)",
  "documentation": {
    "kind": "markdown",
    "value": "\`\`\`css
/* stylelint-disable rule */
/* stylelint-enable rule */
\`\`\`",
  },
  "insertText": "/* stylelint-disable \${0:rule} */
/* stylelint-enable \${0:rule} */",
  "insertTextFormat": 2,
  "kind": 15,
  "label": "stylelint-disable",
}
`;

exports[`createDisableCompletionItem should create a stylelint-disable completion item for a specific rule 1`] = `
{
  "detail": "Turn off all Stylelint or individual rules, after which you do not need to re-enable Stylelint. (Stylelint)",
  "documentation": {
    "kind": "markdown",
    "value": "\`\`\`css
/* stylelint-disable indentation */
/* stylelint-enable indentation */
\`\`\`",
  },
  "insertText": "/* stylelint-disable \${0:indentation} */
/* stylelint-enable \${0:indentation} */",
  "insertTextFormat": 2,
  "kind": 15,
  "label": "stylelint-disable",
}
`;

exports[`createDisableCompletionItem should create a stylelint-disable-line completion item 1`] = `
{
  "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (Stylelint)",
  "documentation": {
    "kind": "markdown",
    "value": "\`\`\`css
/* stylelint-disable-line rule */
\`\`\`",
  },
  "insertText": "/* stylelint-disable-line \${0:rule} */",
  "insertTextFormat": 2,
  "kind": 15,
  "label": "stylelint-disable-line",
}
`;

exports[`createDisableCompletionItem should create a stylelint-disable-line completion item for a specific rule 1`] = `
{
  "detail": "Turn off Stylelint rules for individual lines only, after which you do not need to explicitly re-enable them. (Stylelint)",
  "documentation": {
    "kind": "markdown",
    "value": "\`\`\`css
/* stylelint-disable-line indentation */
\`\`\`",
  },
  "insertText": "/* stylelint-disable-line \${0:indentation} */",
  "insertTextFormat": 2,
  "kind": 15,
  "label": "stylelint-disable-line",
}
`;

exports[`createDisableCompletionItem should create a stylelint-disable-next-line completion item 1`] = `
{
  "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (Stylelint)",
  "documentation": {
    "kind": "markdown",
    "value": "\`\`\`css
/* stylelint-disable-next-line rule */
\`\`\`",
  },
  "insertText": "/* stylelint-disable-next-line \${0:rule} */",
  "insertTextFormat": 2,
  "kind": 15,
  "label": "stylelint-disable-next-line",
}
`;

exports[`createDisableCompletionItem should create a stylelint-disable-next-line completion item for a specific rule 1`] = `
{
  "detail": "Turn off Stylelint rules for the next line only, after which you do not need to explicitly re-enable them. (Stylelint)",
  "documentation": {
    "kind": "markdown",
    "value": "\`\`\`css
/* stylelint-disable-next-line indentation */
\`\`\`",
  },
  "insertText": "/* stylelint-disable-next-line \${0:indentation} */",
  "insertTextFormat": 2,
  "kind": 15,
  "label": "stylelint-disable-next-line",
}
`;
